--- a/ShiftOS.Engine/Properties/Resources.resx
+++ b/ShiftOS.Engine/Properties/Resources.resx
@@ -121,22 +121,13 @@
   <data name="nullIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\nullIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Symbolinfo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Symbolinfo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconInfoBox_fw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconInfoBox.fw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="infobox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\infobox.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="symbolError" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\symbolError.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="symbolInfo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Symbolinfo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="symbolQuestion" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\symbolQuestion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="symbolWarning" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\symbolWarning.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
